--- a/content/pom.xml
+++ b/content/pom.xml
@@ -42,6 +42,10 @@
         <maven.compiler.target>17</maven.compiler.target>
         <jackson.version>2.12.6</jackson.version>
     </properties>
+    <properties>
+         <sonar.organization>lil0431</sonar.organization>
+         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 
 
     <distributionManagement>
